--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
+    "@mui/x-date-pickers": "^6.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.0",
     "axios": "^1.3.5",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -24,6 +26,7 @@
     "react-router-dom": "^6.10.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "rsuite": "^5.30.0",
     "sass-loader": "^13.2.2",
     "web-vitals": "^2.1.4"
