--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.10.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "rsuite": "^5.30.0",
     "sass-loader": "^13.2.2",
