--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@faker-js/faker": "^7.6.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@mui/x-date-pickers": "^6.1.0",
@@ -15,11 +16,14 @@
     "antd": "^5.4.0",
     "axios": "^1.3.5",
     "dayjs": "^1.11.7",
+    "faker-js": "^1.0.0",
     "formik": "^2.2.9",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-google-chart": "^0.1.2",
+    "react-google-charts": "^4.0.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-intl": "^6.3.2",
